tests/src/errors/infinite_recursion/infinite_recursion_2.rustemo
E: E '+' E {1}
 | E '*' E {2};

terminals
Plus: '+';
Mul: '*';
